[package]
name = "rhai-env"
version = "0.1.0"
edition = "2021"
authors = ["Jonas da Silva"]
repository = "https://github.com/phoenixr-codes/rhai-env"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "Environment package for Rhai"
keywords = ["scripting", "scripting-language", "embedded", "rhai", "environment"]
categories = ["embedded"]

[features]
default = []
metadata = ["rhai/metadata"] # doc generation
sync = ["rhai/sync"]         # support `sync` builds of Rhai
no_index = []                # support `no_index` builds of Rhai

[dependencies]
rhai = { version = ">=1.9" }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
rhai = { version = "1.20.1" }
serde_json = "1.0.82"
serde = "1.0.140"

# NOTE: Need to manually specify `metadata` feature for local `cargo doc`.
[package.metadata.docs.rs]
features = ["metadata"]
